--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "Lalit shirsath",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.5"
   }
 }
